<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ct_mudanca_escala"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:showIn="@layout/content_main">

    <TextView
        android:id="@+id/tv_titulo_escala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/titulo_escala"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_titulo_ids_escala"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titulo_ids_escala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/objetos_selecionados"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_escala" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="110dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_titulo_ids_escala"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_ids_escala">

        <TextView
            android:id="@+id/tv_ids_selecionados_escala"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="5dp"
            android:text="@string/sem_objetos_selecionados"
            android:textSize="11sp" />

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ct_botoes_escala"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_border_rounded"
        android:backgroundTint="@color/brancoEscuro"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toEndOf="@id/tv_titulo_escala"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <Button
            android:id="@+id/btn_escala_025"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="0.25x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toTopOf="@id/btn_escala_125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_escala_05"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="0.5x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toTopOf="@id/btn_escala_150"
            app:layout_constraintEnd_toStartOf="@id/btn_escala_075"
            app:layout_constraintStart_toEndOf="@id/btn_escala_025"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_escala_075"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="0.75x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toTopOf="@id/btn_escala_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_escala_125"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="1.25x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_escala_025" />

        <Button
            android:id="@+id/btn_escala_150"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="1.5x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_escala_075"
            app:layout_constraintStart_toEndOf="@id/btn_escala_025"
            app:layout_constraintTop_toBottomOf="@id/btn_escala_05" />

        <Button
            android:id="@+id/btn_escala_2"
            android:layout_width="@dimen/btn_escala_w"
            android:layout_height="@dimen/btn_escala_h"
            android:text="2x"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_escala_075" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>